--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 ---
-title: "Accueil"
 layout: splash
 permalink: /
 date: 2019-07-31
+
 header:
   overlay_color: "#000"
-  overlay_filter: "0.2"
+  overlay_filter: "0.3"
   overlay_image: /img/masques-musee-africart-kara-togo-splash-1600x900.jpg
   actions:
-    - label: "L'une des plus belle collection du Togo"
-      url: ""
-  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
-intro:
-  - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
+    - label: "Visitez notre musée !"
+      url: "/musee/"
+  caption: ""
+
+excerpt: "A Kara au Togo viens de s’ouvrir le musée art des masques et des sculptures Africaines. Dans ce lieu on trouve un nombre important de masques et de sculptures essayant de donner un visage aux différentes ethnies  peuplant les pays côtiers et intérieur de l’Afrique depuis la Guinée, l’Angola et plus.<br>Lors de votre prochaine visite, vous aurez déjà l’occasion de faire un grand et beau voyage tout en restant dans un espace qui je l’espère vous sera agréable..."
+
 feature_row:
-  - image_path: assets/images/unsplash-gallery-image-1-th.jpg
+  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
     alt: "placeholder image 1"
     title: "Placeholder 1"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
+  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
+    image_caption: "Some of our masks"
     alt: "placeholder image 2"
     title: "Placeholder 2"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
-  - image_path: /assets/images/unsplash-gallery-image-3-th.jpg
+  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
     title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
 feature_row2:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
     alt: "placeholder image 2"
     title: "Placeholder Image Left Aligned"
     excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
@@ -39,24 +39,15 @@ feature_row2:
     btn_label: "Read More"
     btn_class: "btn--primary"
 feature_row3:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
     alt: "placeholder image 2"
     title: "Placeholder Image Right Aligned"
     excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
-feature_row4:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Center Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
----
 
-{% include feature_row id="intro" type="center" %}
+---
 
 {% include feature_row %}
 
@@ -64,4 +55,3 @@ feature_row4:
 
 {% include feature_row id="feature_row3" type="right" %}
 
-{% include feature_row id="feature_row4" type="center" %}
