--- a/index.html
+++ b/index.html
@@ -10,33 +10,15 @@ header:
   actions:
     - label: "Visitez notre musée !"
       url: "/musee/"
-  caption: ""
+excerpt: "Faites un voyage dans une collection exceptionnelle."
 
-excerpt: "A Kara au Togo viens de s’ouvrir le musée art des masques et des sculptures Africaines. Dans ce lieu on trouve un nombre important de masques et de sculptures essayant de donner un visage aux différentes ethnies  peuplant les pays côtiers et intérieur de l’Afrique depuis la Guinée, l’Angola et plus.<br>Lors de votre prochaine visite, vous aurez déjà l’occasion de faire un grand et beau voyage tout en restant dans un espace qui je l’espère vous sera agréable..."
-
-feature_row:
-  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
-    alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
-    image_caption: "Some of our masks"
-    alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
 feature_row2:
   - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Left Aligned"
+    alt: "Notre Association"
+    title: "Notre association"
     excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
     url: "#test-link"
-    btn_label: "Read More"
+    btn_label: "En savoir plus sur notre association"
     btn_class: "btn--primary"
 feature_row3:
   - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
