--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: splash
+layout: home
 permalink: /
 date: 2019-07-31
 
@@ -16,8 +16,8 @@ feature_row2:
   - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
     alt: "Notre Association"
     title: "Notre association"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
-    url: "#test-link"
+    excerpt: 'Nous sommes une association de promotion du tourisme dans la région de Kara au Togo.'
+    url: "/association/"
     btn_label: "En savoir plus sur notre association"
     btn_class: "btn--primary"
 feature_row3:
