--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@ header:
 excerpt: "Faites un voyage dans une collection exceptionnelle."
 
 feature_row2:
-  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
+  - image_path: /img/musee/africart-kara-musee-masques-01-600x411.jpg
     alt: "Notre Association"
     title: "Notre association"
     excerpt: 'Nous sommes une association de promotion du tourisme dans la région de Kara au Togo.'
     url: "/association/"
     btn_label: "En savoir plus sur notre association"
     btn_class: "btn--primary"
+
 feature_row3:
-  - image_path: /img/musee/africart-kara-musee-masques-01-800x548.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Right Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
+  - image_path: /img/services/musee-africart-togo-hebergement-kara-600x337.jpg
+    alt: "Nos services"
+    title: "Nos services"
+    excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre visite dans la région de Kara"
     url: "#test-link"
-    btn_label: "Read More"
+    btn_label: "En savoir plus"
     btn_class: "btn--primary"
 
 ---
