--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 ---
-layout: home
+layout: single
+classes: wide
 permalink: /
 
 header:
   overlay_color: "#000"
-  overlay_filter: "0.3"
+  overlay_filter: "0.5"
   overlay_image: /img/masques-musee-africart-kara-togo-splash-1600x900.jpg
   image_description: Musée AFRICART Kara
   caption: Musée AFRICART Kara, Togo
   actions:
     - label: "Visitez notre musée !"
       url: "/musee/"
+
 excerpt: "Faites un voyage dans une collection exceptionnelle."
 
 features :
