--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ header:
 excerpt: "Faites un voyage dans une collection exceptionnelle."
 
 features :
-  feature_row2:
+  association:
     - type: left
       image_path: /img/musee/africart-kara-musee-masques-01-600x411.jpg
       alt: "Notre Association"
@@ -26,7 +26,7 @@ features :
       btn_label: "En savoir plus sur notre association"
       btn_class: "btn--primary"
 
-  feature_row3:
+  services:
     - type: right
       image_path: /img/services/musee-africart-togo-hebergement-kara-600x337.jpg
       alt: "Nos services"
@@ -36,5 +36,18 @@ features :
       btn_label: "En savoir plus"
       btn_class: "btn--primary"
 
+  découvertes:
+    - type: left
+      image_path: /img/decouverte/mont-tchare-togo-02-600x337.jpg
+      alt: "Les découvertes à faire dans la région de Kara"
+      title: "Les découvertes à faire dans la région de Kara"
+      excerpt: >
+         Du Musée Kabyè au 'Rocher des Morts', en passant par les fêtes d'Evala.
+         Une plongée dans les cultures de la région de Kara.
+      url: "/decouvertes/"
+      btn_label: "En savoir plus"
+      btn_class: "btn--primary"
+
 ---
+
 {% include features_rows_output %}
