--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ features :
 
   services:
     - type: right
-      image_path: /img/services/musee-africart-togo-hebergement-kara-600x337.jpg
+      image_path: /img/services/musee-africart-togo-hebergement-kara-02-600x450.jpg
       alt: "Nos services"
       title: "Nos services"
-      excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre visite dans la région de Kara"
+      excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre venue dans la région de Kara"
       url: "#test-link"
       btn_label: "En savoir plus"
       btn_class: "btn--primary"
@@ -39,7 +39,7 @@ features :
   découvertes:
     - type: left
       image_path: /img/decouverte/mont-tchare-togo-02-600x337.jpg
-      alt: "Les découvertes à faire dans la région de Kara"
+      alt: "Mont Tcharé - Togo"
       title: "Les découvertes à faire dans la région de Kara"
       excerpt: >
          Du Musée Kabyè au 'Rocher des Morts', en passant par les fêtes d'Evala.
