--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ features :
       alt: "Nos services"
       title: "Nos services"
       excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre venue dans la région de Kara"
-      url: "#test-link"
+      url: "/services/"
       btn_label: "En savoir plus"
       btn_class: "btn--primary"
 
