--- a/admin/index.html
+++ b/admin/index.html
@@ -1,9 +1,13 @@
+---
+sitemap: false
+layout: null
+---
 <!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
+  <title>{{ site.title }} - admin</title>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
