moved index to _pages collection

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,7 +6,7 @@ permalink: /
 header:
   overlay_color: #f00
   overlay_filter: 0
-  overlay_image: /img/masques-musee-africart-kara-togo-splash-1600x900.jpg
+  overlay_image: https://res.cloudinary.com/museeafricartkara/image/upload/v1572346076/musee/africart-kara-musee-masques-02-1600x400_tkq8de.jpg
   image_description: Musée AFRICART Kara
   caption: Musée AFRICART Kara, Togo
   actions:
@@ -16,9 +16,9 @@ header:
 excerpt: "Faites un voyage dans une collection exceptionnelle."
 
 features :
-  association:
+#  association:
     - type: left
-      image_path: /img/musee/africart-kara-musee-masques-01-600x411.jpg
+      image_path: /v1572346076/musee/africart-kara-musee-masques-01-600x411_zttv9b.jpg
       alt: "Notre Association"
       title: "Notre association"
       excerpt: 'Nous sommes une association de promotion du tourisme dans la région de Kara au Togo.'
@@ -26,9 +26,9 @@ features :
       btn_label: "En savoir plus sur notre association"
       btn_class: "btn--primary"
 
-  services:
+#  services:
     - type: right
-      image_path: /img/services/musee-africart-togo-hebergement-kara-02-600x450.jpg
+      image_path: /v1572347161/services/musee-africart-togo-hebergement-kara-02-600x450_uejp2h.jpg
       alt: "Nos services"
       title: "Nos services"
       excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre venue dans la région de Kara"
@@ -36,9 +36,9 @@ features :
       btn_label: "En savoir plus"
       btn_class: "btn--primary"
 
-  découvertes:
+#  découvertes:
     - type: left
-      image_path: /img/decouverte/mont-tchare-togo-02-600x337.jpg
+      image_path: /v1572347215/decouvertes/mont-tchare-togo-02-600x337_s13irs.jpg
       alt: "Mont Tcharé - Togo"
       title: "Les découvertes à faire dans la région de Kara"
       excerpt: >
@@ -50,4 +50,5 @@ features :
 
 ---
 
-{% include features_rows_output %}
+{% include CMS_features_rows_output %}
+
