refactoring features + admin config

--- a/index.html
+++ b/index.html
@@ -16,38 +16,36 @@ header:
 excerpt: "Faites un voyage dans une collection exceptionnelle."
 
 features :
-  association:
-    - type: left
-      image_path: /img/musee/africart-kara-musee-masques-01-600x411.jpg
-      alt: "Notre Association"
-      title: "Notre association"
-      excerpt: 'Nous sommes une association de promotion du tourisme dans la région de Kara au Togo.'
-      url: "/association/"
-      btn_label: "En savoir plus sur notre association"
-      btn_class: "btn--primary"
 
-  services:
-    - type: right
-      image_path: /img/services/musee-africart-togo-hebergement-kara-02-600x450.jpg
-      alt: "Nos services"
-      title: "Nos services"
-      excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre venue dans la région de Kara"
-      url: "/services/"
-      btn_label: "En savoir plus"
-      btn_class: "btn--primary"
+  - type: left
+    image_path: /img/musee/africart-kara-musee-masques-01-600x411.jpg
+    alt: "Notre Association"
+    title: "Notre association"
+    excerpt: 'Nous sommes une association de promotion du tourisme dans la région de Kara au Togo.'
+    url: "/association/"
+    btn_label: "En savoir plus sur notre association"
+    btn_class: "btn--primary"
 
-  découvertes:
-    - type: left
-      image_path: /img/decouverte/mont-tchare-togo-02-600x337.jpg
-      alt: "Mont Tcharé - Togo"
-      title: "Les découvertes à faire dans la région de Kara"
-      excerpt: >
-         Du Musée Kabyè au 'Rocher des Morts', en passant par les fêtes d'Evala.
-         Une plongée dans les cultures de la région de Kara.
-      url: "/decouvertes/"
-      btn_label: "En savoir plus"
-      btn_class: "btn--primary"
+  - type: right
+    image_path: /img/services/musee-africart-togo-hebergement-kara-02-600x450.jpg
+    alt: "Nos services"
+    title: "Nos services"
+    excerpt: "Nous vous proposons un service de réservation d'hébergements, de véhicules ou de visites, lors de votre venue dans la région de Kara"
+    url: "/services/"
+    btn_label: "En savoir plus"
+    btn_class: "btn--primary"
+
+  - type: left
+    image_path: /img/decouverte/mont-tchare-togo-02-600x337.jpg
+    alt: "Mont Tcharé - Togo"
+    title: "Les découvertes à faire dans la région de Kara"
+    excerpt: >
+       Du Musée Kabyè au 'Rocher des Morts', en passant par les fêtes d'Evala.
+       Une plongée dans les cultures de la région de Kara.
+    url: "/decouvertes/"
+    btn_label: "En savoir plus"
+    btn_class: "btn--primary"
 
 ---
 
-{% include features_rows_output %}
+{% include features_output %}
